--- a/web/css/main.css
+++ b/web/css/main.css
@@ -26,11 +26,14 @@ body {
     margin: 20px 300px;
 }
 #body #messageArea {
+}
+#body #messageCard {
     border-style: solid;
     border-color: lightgrey;
     border-width: 4px;
+    margin: 10px;
+    padding: 10px;
 }
-
 #footer {
     margin: 30px 100px;
 }
