--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,25 +1,26 @@
 body {
     margin: 0px;
+    background-color: #e8e8e8;
 }
 
 #header {
-    background-color: #2e9afe;
-}
-
-#header #headerName {
-    margin: 50px 20px 50px 100px;
-    font-size: 30px;
+    background-color: #4090bf;
+    padding: 9px;
     color: white;
 }
 
-#header #searchBar {
-    margin: 20px 1px
+#header #headerName {
+    margin: 0 20px;
+    font-size: 35px;
+}
+
+#header #searchField {
+    width: 600px;
+    height: 25px;
 }
 
 #header #loginInfo {
     float: right;
-    margin: 10px 100px;
-    color: white;
 }
 
 #body {
@@ -30,6 +31,7 @@ body {
 }
 
 #body #messageCard {
+    background-color: white;
     border-style: solid;
     border-color: lightgrey;
     border-width: 4px;
@@ -44,10 +46,11 @@ body {
 
 #body #messageCard .usernameAndDate {
     float: rigth;
+    font-family: Arial;
 }
 
 #body #messageCard .messageAuthor {
-    color: lightblue;
+    color: #4090bf;
 }
 
 #body #messageCard .messageDate {
@@ -58,13 +61,22 @@ body {
 #body #messageCard .messageText {
     clear: both;
     padding: 10px 0;
+    font-size: large;
 }
 
 #body #messageCard .messageButtons {
     padding: 5px 20px;
-    color: lightblue;
+    color: #4090bf;
+    font-family: Arial;
 }
 
 #footer {
     margin: 30px 100px;
+    color: grey;
+    font-size: large;
+    font-family: Arial;
+}
+
+#footer .footerLink {
+    padding: 20px;
 }
