--- a/web/css/app.css
+++ b/web/css/app.css
@@ -1,3 +1,24 @@
+#header {
+    background-color: #4090bf;
+    padding: 9px;
+    color: white;
+}
+
+#header #headerName {
+    margin: 0 20px;
+    font-size: 35px;
+}
+
+#header #searchField {
+    width: 600px;
+    height: 25px;
+}
+
+#header #loginInfo {
+    float: right;
+}
+
+
 .messageCard {
     background-color: white;
     border-style: solid;
