CLEANUP2: Updated look and feel of UI

--- a/web/css/app.css
+++ b/web/css/app.css
@@ -1,6 +1,6 @@
 #header {
     background-color: #4090bf;
-    padding: 9px;
+    padding: 7px;
     color: white;
 }
 
@@ -10,8 +10,12 @@
 }
 
 #header #searchField {
-    width: 650px;
+    width: 550px;
     height: 25px;
+}
+
+#header #welcome {
+    float: right;
 }
 
 body {
@@ -22,33 +26,50 @@ body {
     background-color: white;
     border-style: solid;
     border-color: lightgrey;
-    border-width: 4px;
+    border-width: 1px;
     margin: 10px;
     padding: 10px;
 }
+
 .messageCard .userIcon {
     float: left;
     margin: 0 15px 0 0;
+    width: 50px;
+    height: 50px;
 }
 
 .messageCard .usernameAndDate {
-    float: rigth;
+    float: left;
     font-family: Arial;
 }
 
 .messageCard .messageAuthor {
-    color: #4090bf;
+    color: #3b5998;
+    font-weight: bold;
+}
+
+.messageCard .messageReason {
+    color: gray;
+    font-style: italic;
 }
 
 .messageCard .messageDate {
-    color: lightgrey;
-    padding: 8px;
+    color: gray;
+    padding: 0px;
+    font-size: smaller;
+}
+
+.messageCard .messageReason {
+    color: #888888;
+    font-style: italic;
+    font-size: smaller;
 }
 
 .messageCard .messageText {
+    color: #141823;
     clear: both;
     padding: 10px 0;
-    font-size: large;
+    font-size: small;
 }
 
 .messageCard .messageButtons {
@@ -74,3 +95,37 @@ body {
     color: orangered;
 }
 
+a {
+    color: #888888;
+}
+
+.customButton {
+    width: 78px;
+}
+
+#school-entry {
+    color: gray;
+}
+
+#school-entry td {
+    font-size: 80%;
+}
+
+#tag-entry {
+    color: gray;
+}
+
+.borderless tbody tr td, .borderless tbody tr th, .borderless thead tr th {
+    border: none;
+}
+
+.truncate {
+    table-layout: fixed;
+}
+
+.truncate td {
+    width:250px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
