Support Commenting on Messages - Data Model: added messages.reference_id - Updated Data Model Diagram - Created new Class Diagram

--- a/web/css/app.css
+++ b/web/css/app.css
@@ -66,8 +66,7 @@ body {
 }
 
 .messageCard .messageFooter {
-    font-size: small;
-    text-align: center;
+    font-size: large;
 }
 .messageCard .messageFooterButton {
     padding: 0 20px 0 20px;
