--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,82 +1,7 @@
 body {
-    margin: 0px;
     background-color: #e8e8e8;
 }
 
-#header {
-    background-color: #4090bf;
-    padding: 9px;
-    color: white;
-}
-
-#header #headerName {
-    margin: 0 20px;
-    font-size: 35px;
-}
-
-#header #searchField {
-    width: 600px;
-    height: 25px;
-}
-
-#header #loginInfo {
-    float: right;
-}
-
-#body {
-    margin: 20px 300px;
-}
-
-#body #messageArea {
-}
-
-#body #messageCard {
-    background-color: white;
-    border-style: solid;
-    border-color: lightgrey;
-    border-width: 4px;
-    margin: 10px;
-    padding: 10px;
-}
-
-#body #messageCard .userIcon {
-    float: left;
-    margin: 0 15px 0 0;
-}
-
-#body #messageCard .usernameAndDate {
-    float: rigth;
-    font-family: Arial;
-}
-
-#body #messageCard .messageAuthor {
-    color: #4090bf;
-}
-
-#body #messageCard .messageDate {
-    color: lightgrey;
-    padding: 8px;
-}
-
-#body #messageCard .messageText {
-    clear: both;
-    padding: 10px 0;
-    font-size: large;
-}
-
-#body #messageCard .messageButtons {
-    padding: 5px 20px;
-    color: #4090bf;
-    font-family: Arial;
-}
-
-#footer {
-    margin: 30px 100px;
-    color: grey;
-    font-size: large;
-    font-family: Arial;
-}
-
-#footer .footerLink {
-    padding: 20px;
+DIV {
+  /* border: solid 2px black; */
 }
