--- a/web/css/signup.css
+++ b/web/css/signup.css
@@ -1,3 +1,13 @@
+#sign_up .missing-value {
+   border-color: red;
+}
+.user-message {
+    color: green;
+}
+.error-message {
+    color: red;
+}
+
 /*.tt-query {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
