--- a/web/css/header.css
+++ b/web/css/header.css
@@ -20,19 +20,20 @@
 }
 #header #header-menu {
    display: none;
-   border: solid 1px black;
+   border: solid 1px grey;
    position: absolute;
    list-style-type: none;
-   background-color: #e8e8e8;
+   background-color: white;
    color: black;
    text-align: left;
-   padding: 20px;
+   padding: 15px;
    top: 30px;
    right: 12px;
    z-index: 1;
 }
 #header #header-menu li {
-   padding: 10px;
+   padding: 7px;
+   font-size: 12px;
 }
 #header #header-menu li:hover {
    background-color: gold;
