Don't show search when not logged in

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -14,3 +14,9 @@ DIV {
 .search-term {
     background-color: #FFC31E; /* light Orange */
 }
+.visible {
+    visibility: block;
+}
+.not-visible {
+    visibility: hidden;
+}
