--- a/web/css/feed.css
+++ b/web/css/feed.css
@@ -11,7 +11,9 @@
     float: left;
     margin: 0 15px 0 0;
 }
-
+.messageCard img {
+    width: 70px;
+}
 .messageCard .usernameAndDate {
     float: left;
     font-family: Arial;
