profile minor styling

--- a/web/css/profile.css
+++ b/web/css/profile.css
@@ -34,6 +34,11 @@ TABLE.profileTable tr th {
     display: block;
 }
 
+#schoolsReached #schoolsReachedHeader {
+    color: black;
+    font-weight: bold;
+    margin-top: 20px;
+}
 #schoolsReached .schoolName {
     color: grey;
 }
