--- a/web/css/header.css
+++ b/web/css/header.css
@@ -88,7 +88,7 @@
 #header #header-login .btn {
    padding: 0 10px;
 }
-#header #header-login #login-form {
+#header #header-login form {
     clear: both;
     float: right;
 }
@@ -112,12 +112,12 @@
 #header #forgotpw h3 {
     color: black;
 }
-#header #pw-reset-msg {
+.user-msg {
     background-color: white;
     color: green;
     text-align: center;
     padding: 10px;
 }
-#header #pw-reset-msg.error {
+.user-msg.error {
     color: #c93838; /*red */
 }
