profile pic: say "Click to upload your profile photo" when no image has been given

--- a/web/css/profile.css
+++ b/web/css/profile.css
@@ -47,3 +47,14 @@ TABLE.profileTable tr th {
 #change-pw .missing-value {
    border-color: red;
 }
+#profile-pic #profile-pic-action-text{
+    position: relative;
+    width: 100%;
+}
+#profile-pic p#profile-pic-action-text {
+    position: absolute;
+    top: 50px;
+    left: 0;
+    width: 100%;
+    color: orange;
+}
