--- a/web/css/home.css
+++ b/web/css/home.css
@@ -32,7 +32,7 @@
 }
 #home-page #explainer-video {
     width: 72%;  /* 90% * 80% */
-    margin: auto;
+    margin-left: 35px;
     position: relative;
     padding-bottom: 45%; /* (16:9) * 80%  */
     padding-top: 25px;
